# StrictSystem

./: CMakeLists.txt  README.md  Solver.cpp  Solver.h  errorgraph.cpp  errorgraph.h  errorgraph.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.h
